Bug 125497 - It needs multiple backspace to remove one Japanese IVS character.
Summary: It needs multiple backspace to remove one Japanese IVS character.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: IVS
  Show dependency treegraph
 
Reported: 2019-05-26 02:50 UTC by Mark Hung
Modified: 2019-06-08 09:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file that contains Japanese IVS characters. (13.51 KB, application/vnd.oasis.opendocument.presentation)
2019-05-26 02:52 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2019-05-26 02:50:31 UTC
Description:
Ideograph variation sequences (IVS) consist of a base character followed by a variation selector in unicode. Japanese users expect to remove an IVS character by pressing backspace once instead of multiple times.

Steps to Reproduce:
1. Open the attachment file.
2. Put the cursor behind any ideograph.
3. Press backspace.

Actual Results:
It needs at least two backspace to remove one Japanese IVS character.

Expected Results:
Press backspace once to remove one Japanese IVS character.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Mark Hung 2019-05-26 02:52:12 UTC
Created attachment 151677 [details]
Sample file that contains Japanese IVS characters.
Comment 2 Commit Notification 2019-05-30 08:59:30 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6a7db071c75609093fc3a9cbc297b8069726a33e%5E%21

tdf#125497 allow backspace to remove CJK IVS.

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Tomofumi Yagi 2019-06-08 09:08:42 UTC
I confirmed that the Japanese IVS characters were successfully deleted in Backspace in the following environment.

バージョン: 6.4.0.0.alpha0+ (x64)
Build ID: 3e82710d1e368a4c1a942270efa3ee6f4c936f67
CPU threads: 8; OS:Windows 10.0; UI render: default; VCL: win; 
ロケール: ja-JP (ja_JP); UI-Language: ja-JP
Calc: threaded
Comment 4 himajin100000 2019-06-08 09:10:26 UTC
(In reply to Tomofumi Yagi from comment #3)
> I confirmed that the Japanese IVS characters were successfully deleted in
> Backspace in the following environment.

in that case, I think this report should be RESOLVED FIXED (or VERIFIED?)
Comment 5 Tomofumi Yagi 2019-06-08 09:15:32 UTC
(In reply to himajin100000 from comment #4)
> (In reply to Tomofumi Yagi from comment #3)
> > I confirmed that the Japanese IVS characters were successfully deleted in
> > Backspace in the following environment.
> 
> in that case, I think this report should be RESOLVED FIXED (or VERIFIED?)

That's right.
Thanks for himajin100000.