tdf#125497 allow backspace to remove CJK IVS.

Japanese users prefer to remove a CJK IVS character
when pressing the backspace instead of removing
the selector part of IVS.

Change-Id: I4313d69ed52d82c5a7e4e4823b1da06f1d90bdad
Reviewed-on: https://gerrit.libreoffice.org/72971
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>