sw/source/uibase/wrtsh/delete.cxx
@@ -44,23 +44,6 @@ inline void SwWrtShell::CloseMark( bool bOkFlag )
     EndAllAction();
 }
 
-namespace {
-
-bool isUnicodeVariationSequenceSelector( sal_uInt32 nCode )
-{
-    return ( nCode >= 0xFE00 && nCode <= 0xFE0F )   // Variation Selectors block
-        || ( nCode >= 0xE0100 && nCode <= 0xE01EF );// Variation Selectors Supplement block
-}
-
-// Return if the character might be a base character of a CJK ideographic variation sequence
-bool isCJKIVSCharacters( sal_uInt32 nCode )
-{
-    return ( nCode >= 0x4E00 && nCode <= 0x9FFF )       // CJK Unified Ideographs
-        || ( nCode >= 0x3400 && nCode <= 0x4DBF )       // CJK Unified Ideographs Extension A
-        || ( nCode >= 0x20000 && nCode <= 0x2A6DF );    // CJK Unified Ideographs Extension B
-}
-
-}
 
 
 // #i23725#
@@ -268,14 +251,14 @@ bool SwWrtShell::DelLeft()
                 nCode = sStr.iterateCodePoints( &nIndex );
             }
 
-            if ( isUnicodeVariationSequenceSelector( nCode ) )
+            if ( rtl::isIVSSelector( nCode ) )
             {
                 SwCursorShell::Push();
                 SwCursorShell::Left(1, CRSR_SKIP_CHARS);
                 OUString sStr = GetSelText();
                 sal_Int32 nIndex = 0;
                 nCode = sStr.iterateCodePoints( &nIndex );
-                if ( isCJKIVSCharacters( nCode ) )
+                if ( rtl::isCJKIVSCharacter( nCode ) )
                     SwCursorShell::Pop( SwCursorShell::PopMode::DeleteStack );
                 else
                     SwCursorShell::Pop( SwCursorShell::PopMode::DeleteCurrent ); // For the weak script.
